tests/fixtures/invalid/bool_floordiv_str.py
# Cannot floor divide Bool and Str
x: bool = True // "hello"
